New blog post on log1p distorts fc

--- a/blog/log1p-distorts-fc/index.qmd
+++ b/blog/log1p-distorts-fc/index.qmd
@@ -3,7 +3,7 @@ title: "Pseudocounts distorts fold change"
 author: "Boyi Guo"
 date: "2024-03-13"
 bibliography: references.bib
-categories: [SRT]
+categories: [technical report]
 ---
 
 ```{r setup, include=FALSE}
