--- a/index.qmd
+++ b/index.qmd
@@ -25,7 +25,7 @@ I am an applied statistician and biomedical data scientist working at the inters
 
 ------------------------------------------------------------------------
 
-Currently, I am a postdoctoral fellow in Biostatistics at Johns Hopkins Bloomberg of School of Public Health, mentored by Dr. [Stephanie Hicks](https://www.stephaniehicks.com/). *I am open to opportunities that advance my scientific career.*
+Currently, I am an Assistnat Professor in the Division of Biostatistics, Department of Population Health Sciences at University of Utah. 
 
 ------------------------------------------------------------------------
 
